@@ -168,7 +168,7 @@ NOEXEC=
 
 ONLY_TESTS=
 TESTS=
-TIMEOUT=10
+TIMEOUT=11
 
 ERRORS=
 
