@@ -1,0 +1,5 @@
+dtrace: script 'test/dtrace/end.d' matched 2 probes
+
+CPU     ID                    FUNCTION:NAME
+                                       :END total time: 11 secs
+          
