@@ -1,0 +1,14 @@
+dtrace: script 'test/intro/countdown.d' matched 3 probes
+CPU     ID                    FUNCTION:NAME
+                                 :tick-1sec        10
+                                 :tick-1sec         9
+                                 :tick-1sec         8
+                                 :tick-1sec         7
+                                 :tick-1sec         6
+                                 :tick-1sec         5
+                                 :tick-1sec         4
+                                 :tick-1sec         3
+                                 :tick-1sec         2
+                                 :tick-1sec         1
+                                 :tick-1sec   blastoff!                        
+          
