@@ -1,0 +1,4 @@
+dtrace: script 'test/intro/hello.d' matched 1 probe
+CPU     ID                    FUNCTION:NAME
+                                     :BEGIN   hello, world                     
+          
