@@ -1,0 +1,4 @@
+dtrace: script 'test/script/interp.d' matched 1 probe
+CPU     ID                    FUNCTION:NAME
+                                     :BEGIN   hello                            
+          
